css/style.css
label.error {
    color: red;
    padding-left: 12px;
}

form > .container {
    margin: 0 auto;
    max-width: 510px;
}

form > .container > .fields {
    float: right;
}

form > .container > .fields > div {
    margin-bottom: 12px;
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
            box-sizing: border-box;
}

form > .container > .fields > div > .characters {
    color: #a5a5a5;
    font-size: 12px;
    font-style: italic;
    font-weight: bold;
    margin-top: 4px;
    margin-right: 4px;
    text-align: right;
}

form > .container > .button {
    clear: both;
    margin: 0 auto;
    width: 220px;
}

form > .container > .button > button {
    background: #3091dd;
    background-image: -moz-linear-gradient(top, #3091dd 0%, #2779d6 100%);
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3091dd), color-stop(100%,#2779d6));
    background-image: -webkit-linear-gradient(top, #3091dd 0%,#2779d6 100%);
    background-image: -o-linear-gradient(top, #3091dd 0%,#2779d6 100%);
    background-image: -ms-linear-gradient(top, #3091dd 0%,#2779d6 100%);
    background-image: linear-gradient(to bottom, #3091dd 0%,#2779d6 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3091dd', endColorstr='#2779d6',GradientType=0 );

    border-radius: 0;
    color: white;
    font-weight: bold;
    font-size: 15px;
    height: 40px;
    margin-top: 28px;
    width: 220px;
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
            box-sizing: border-box;
            transition: opacity .25s ease-in-out;
            -moz-transition: opacity .25s ease-in-out;
            -webkit-transition: opacity .25s ease-in-out;
}

form > .container > .button > button:hover {
    color: white;

    box-shadow: 1px 1px 3px rgba(0,0,0,0.3) inset;
    /*text-shadow: 1px 1px 0 rgba(0,0,0,0.3);*/
    opacity: 0.8;
}

form input,
form textarea {
    border: 1px solid #bebebe;
    border-radius: 1px;
    padding: 14px 16px 12px;
    font-weight: bold;
    font-size: 12px;
    box-shadow: 0 2px 1px rgba(0,0,0,0.1) inset, 0 1px 0 #FFFFFF;
    width: 222px;
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
            box-sizing: border-box;
            transition: box-shadow .25s ease-in-out;
            -moz-transition: box-shadow .25s ease-in-out;
            -webkit-transition: box-shadow .25s ease-in-out;
}

form textarea {
    height: 80px;
}

form input:focus,
form textarea:focus {
    border: 1px solid #56B4EF;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(82, 168, 236, 0.6);
}

#preview {
    float: left;
}

#preview .card {
    background-color: white;
    border-radius: 5px;
    box-shadow: 0 0 5px rgba(0,0,0,0.3);
    height: 247px;
    width: 220px;
    padding: 10px;
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
            box-sizing: border-box;
}

#preview .card label {
    text-align: center;
    width: 100%;
}

#preview .card img {
    border-radius: 3px;
    box-shadow: 0 0 3px rgba(0,0,0,0.3);
    border: 1px solid rgba(0,0,0,0.3);
    cursor: pointer;
    max-width: 200px;
    height: 120px;
}

#preview .card #image {
    display: none;
}

#preview .card p {
    color: #70777a;
    font-size: 13px;
    line-height: 20px;
    font-weight: bold;
    margin-top: 12px;
    overflow: hidden;
    width: 200px;
}

#preview .card p strong {
    color: #606668;
}

#preview .preview-label {
    color: #09c;
}

#preview .preview-label .arrow {
    background-image: url(../images/preview-arrow.png);
    height: 8px;
    margin: 14px auto 0;
    width: 117px;
}

#preview .preview-label .text {
    color: #2b85d9;
    font-weight: bold;
    font-size: 12px;
    text-align: center;
    margin-top: 4px;
}

.clear {
    clear: both;
}

/* Blue Background */
body {
    background-color: transparent;
}

body > section {
    background-color: white;
}

/* Paragraph */
body > section > .container > .info {
    float: left;
    margin-right: 18px;
}
body > section > .container > p {
    margin-bottom: 30px;
}

/* Form */
body > section > form {
    background-color: #eaeaea;
    padding: 0 0 12px;
    margin: 0;
}
body > section > form > .arrow {
    border: 10px solid #eaeaea;
    border-top-color: white;
    width: 10px;
    margin: 0 auto;
}
body > section > form > .container > .note {
    color: #999;
    font-size: 12px;
}

/* Title */
section > fieldset {
    margin-bottom: 24px;
    text-align: center;
    width: 100%;
    margin-top: 30px;
}
section > fieldset > legend {
    border: solid 1px #b5b5b5;
    border-left: none;
    border-right: none;
    border-top: none;
    height: 26px;
}

section > fieldset > legend > h2 {
    background-color: white;
    border: solid 1px #b5b5b5;
    border-radius: 4px;
    box-shadow: 0 0 0 5px white;
    font-size: 24px;
    font-weight: bold;
    margin: 0 auto;
    padding: 0 8px;
    line-height: 50px;
    height: 50px;
    width: 140px;
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
            box-sizing: border-box;
}

.upload {
    transition: opacity .25s ease-in-out;
    -moz-transition: opacity .25s ease-in-out;
    -webkit-transition: opacity .25s ease-in-out;
}

.upload:hover {
    opacity: 0.7;
}

@media screen and (max-width: 510px) {
    #preview {
        float: none;
        margin: 0 auto;
    }
    #preview .card {
        margin: 0 auto;
    }
    form > .container > .fields {
        float: none;
        margin: 0 auto;
        width: 222px;
    }
    .upload:hover {
        opacity: 1;
    }
}

